# rs-verified-der

./: .gitignore  CHANGELOG.md  Cargo.toml  DECISIONS.md  DER-REMAINING-WORK.md  DOCS-SYNC.md  LICENSE-APACHE  LICENSE-MIT  PROOF_MANIFEST.md  README.md  SECURITY.md  TODO.md  check.sh  check_fast.sh  install_hooks.sh  rust-toolchain.toml
.github/workflows/: ci.yml
der-verified/: Cargo.toml  README.md
der-verified/src/: big_integer.rs  bit_string.rs  boolean.rs  context_tag.rs  enumerated.rs  generalized_time.rs  integer.rs  length.rs  lib.rs  null.rs  octet_string.rs  oid.rs  profile.rs  restricted_string.rs  sequence.rs  set_of.rs  tag.rs  tlv.rs  utc_time.rs  utf8_string.rs  x509_algorithm_identifier.rs  x509_certificate.rs  x509_extension.rs  x509_name.rs  x509_spki.rs  x509_tbs_certificate.rs  x509_validity.rs
docs/: verification-cost.md  why-verified.md
gates/: check_links.py  check_provenance.py
hooks/: pre-commit
lean/: BigIntProofs.lean  DerBigintExtract.lean  DerLengthExtract.lean  DerOidExtract.lean  DerSequenceExtract.lean  DerTagExtract.lean  DerTlvExtract.lean  LengthProofs.lean  OidProofs.lean  SequenceProofs.lean  TagProofs.lean  TlvProofs.lean  check_lean.sh  lake-manifest.json  lakefile.toml
lean/extract/: Cargo.toml
lean/extract-bigint/: Cargo.toml
lean/extract-bigint/src/: lib.rs
lean/extract-oid/: Cargo.toml
lean/extract-oid/src/: lib.rs
lean/extract-sequence/: Cargo.toml
lean/extract-sequence/src/: lib.rs
lean/extract-tag/: Cargo.toml
lean/extract-tag/src/: lib.rs
lean/extract-tlv/: Cargo.toml  rust-toolchain.toml
lean/extract-tlv/src/: lib.rs
lean/extract/src/: lib.rs
