[package]
name = "der-verified"
version = "0.0.0"
edition = "2021"
# Keep off crates.io until the publish decision (see TODO.md); this guards against an accidental
# `cargo publish`. Remove when publishing, and bump the version.
publish = false
description = "Formally verified DER (X.690) encoding/decoding — encoding layer only."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ivmat/rs-verified-der"
keywords = ["der", "asn1", "x509", "formal-verification", "kani"]
categories = ["encoding", "parser-implementations"]

[dependencies]

# Register the `kani` cfg (set only under `cargo kani`) so ordinary builds don't warn.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
