[package]
name = "der-verified"
version = "0.0.0"
edition = "2021"
authors = ["Ivo Matijašević"]
readme = "README.md"
description = "Formally verified DER (X.690) encoding/decoding — encoding layer only."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ivmat/rs-verified-der"
keywords = ["der", "asn1", "x509", "formal-verification", "kani"]
categories = ["encoding", "parser-implementations"]

[dependencies]

# Register the `kani` cfg (set only under `cargo kani`) so ordinary builds don't warn.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kani)'] }
