# Extraction shim for the Aeneas→Lean lid (L4) on the `tag` module.
# Deliberately EXCLUDED from the der-verified workspace (see root Cargo.toml) so it
# never enters the Kani gate. Pinned to Charon's nightly; re-exposes the SAME
# tag.rs (no copy → no drift). A SEPARATE crate from `lean/extract` (the length
# shim), `lean/extract-bigint` (big_integer), `lean/extract-oid` (oid), `lean/extract-tlv`
# (tlv), and `lean/extract-sequence` (sequence) so each module's extracted model +
# drift-check stay independent.
[package]
name = "der-tag-extract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
